--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/stile.css">
 		<script src="https://kit.fontawesome.com/b8991598b2.js"></script>
 		<script src="script.js"></script>
+		<meta name="keywords" content="библиоека, онлайн библиотека, farty">
 	</head>
 	<body>
 		<form action="#" method="post" enctype="multipart/form-data"></form>
